--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 <title>Alexei Shakhailo</title>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 
 <body>
 	<div class="page-header">
         <h1><a href="/">My work</a></h1>
+		{% if user.is_authenticated %}
+		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+		{% endif %}
     </div>
     <div class="content container">
         <div class="row">
